--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
     <title>React App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script defer="defer" src="static/js/main.2e3740f0.js"></script>
     <link href="static/css/main.73d0c3d4.css" rel="stylesheet">
 </head>
